# BasaltTestTask

./: CMakeLists.txt  README.md  main.cpp  version.h
install_library/: CMakeLists.txt
lib/: Api_loader.cpp  Api_loader.h  MyLib.cpp  MyLib.h  WorkJson.cpp  WorkJson.h
